--- a/app/src/main/res/layout/fragment_annotation_detail.xml
+++ b/app/src/main/res/layout/fragment_annotation_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.annotationsdetail.AnotationDetailFragment">
+    tools:context=".ui.annotationsdetail.AnnotationDetailFragment">
 
     <TextView
         android:id="@+id/title_annotation"
