--- a/app/src/main/res/layout/fragment_annotation_detail.xml
+++ b/app/src/main/res/layout/fragment_annotation_detail.xml
@@ -12,7 +12,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         tools:text="Title of annotation"
-        android:textSize="@dimen/bigger_text_size"
+        android:textSize="@dimen/extra_bigger_text_size"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_margin="@dimen/bigger_space"
@@ -23,6 +23,7 @@
         android:layout_height="wrap_content"
         tools:text="descriprion of annotation"
         android:layout_margin="@dimen/bigger_space"
+        android:textSize="@dimen/medium_text_size"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintStart_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title_annotation"
