--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="extra_bigger_text_size">32sp</dimen>
     <dimen name="bigger_text_size">22sp</dimen>
     <dimen name="medium_text_size">18sp</dimen>
     <dimen name="bigger_space">16dp</dimen>
