--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/annotationFragment"
-        android:name="com.example.tourismonmarslogbook.ui.annotation.AnnotationFragment"
+        android:name="com.fiap.tourismonmarslogbook.ui.annotation.AnnotationFragment"
         android:label="fragment_anotation"
         tools:layout="@layout/fragment_annotation" >
         <action
@@ -22,7 +22,7 @@
     </fragment>
     <fragment
         android:id="@+id/anotationDetailFragment"
-        android:name="com.example.tourismonmarslogbook.ui.annotationsdetail.AnnotationDetailFragment"
+        android:name="com.fiap.tourismonmarslogbook.ui.annotationsdetail.AnnotationDetailFragment"
         android:label="fragment_anotation_detail"
         tools:layout="@layout/fragment_annotation_detail" >
         <argument
@@ -34,7 +34,7 @@
     </fragment>
     <fragment
         android:id="@+id/addAnnotationFragment"
-        android:name="com.example.tourismonmarslogbook.ui.addannotation.AddAnnotationFragment"
+        android:name="com.fiap.tourismonmarslogbook.ui.addannotation.AddAnnotationFragment"
         android:label="fragment_add_annotation"
         tools:layout="@layout/fragment_add_annotation" >
         <action
@@ -43,7 +43,7 @@
     </fragment>
     <fragment
         android:id="@+id/splashScreenFragment"
-        android:name="com.example.tourismonmarslogbook.ui.splashscreen.SplashScreenFragment"
+        android:name="com.fiap.tourismonmarslogbook.ui.splashscreen.SplashScreenFragment"
         android:label="fragment_splash_screen"
         tools:layout="@layout/fragment_splash_screen" >
         <action
@@ -52,7 +52,7 @@
     </fragment>
     <fragment
         android:id="@+id/rulesFragment"
-        android:name="com.example.tourismonmarslogbook.ui.curiosity.CuriosityFragment"
+        android:name="com.fiap.tourismonmarslogbook.ui.curiosity.CuriosityFragment"
         android:label="fragment_rules"
         tools:layout="@layout/fragment_curiosity" />
 </navigation>
